manifests/benjamintoll/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: benjamintoll-deployment
  labels:
    app: benjamintoll
spec:
  replicas: 5
  selector:
    matchLabels:
      app: benjamintoll
  template:
    metadata:
      labels:
        app: benjamintoll
    spec:
      containers:
      - name: benjamintoll
        image: btoll/benjamintoll.com:latest
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
        resources:
          requests:
            cpu: 20m # 20 milliCPU / 0.02 CPU
        livenessProbe:
          httpGet:
            path: /index.html
            port: http
          initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: benjamintoll-service
  labels:
    app: benjamintoll
spec:
  selector:
    app: benjamintoll
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
        #      nodePort: 31117
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
        #      nodePort: 31118
