manifests/benjamintoll/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: benjamintoll-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: benjamintoll-service
            port:
              number: 80
        path: /
        pathType: Prefix
